# TGSB

./: .gitignore  LICENSE  MESSAGES_TEXT.py  README.md  SECURITY.md  config.py  create_requirements.sh  data.json  handlers.py  kb_builders.py  links.py  main.py  mask.py  pyproject.toml  requirements.txt  spam.py  user_agents.py  validate.py  whitelist.txt
.github/: FUNDING.yml
data/: data.json
keyboards/: admin.py  dev.py  service.py  user.py
logs/: send_logs.py
spam/: gen_user_data.py  mask.py  proxy.py  spam.py
src/: .env  MESSAGES_TEXT.py  config.py  handlers.py  main.py
src/data/: names.txt
src/keyboards/: admin.py  dev.py  user.py
src/spam/: gen_user_data.py  spam.py
