[tool.poetry]
name = "tgsb"
version = "0.1.4"
description = "SMS Bomber"
authors = ["Nighty3098 <night3098games@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
setproctitle = "^1.3.4"
pretty-errors = "^1.2.25"
loguru = "^0.7.2"
dist-info = "^0.1.1"
python-dotenv = "^1.0.1"
psutil = "^6.1.0"
requests = "^2.32.3"
user-agent = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
